--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   influxdb_v2:
-    image: quay.io/influxdb/influxdb:v2.0.3
+    image: quay.io/influxdb/influxdb:{{ influxdb.version }}
     command: --reporting-disabled
     restart: always
     ports:
