--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -2,10 +2,10 @@ version: "3"
 
 services:
   influxdb_v2:
-    image: quay.io/influxdb/influxdb:{{ influxdb.version }}
+    image: influxdb:{{ influxdb.version }}
     command: --reporting-disabled
     restart: always
     ports:
       - "{{ influxdb.host }}:{{ influxdb.port }}:8086"
     volumes:
-      - ./influxdbv2/:/root/.influxdbv2/
+      - ./influxdbv2/:/var/lib/influxdb2/
