--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -3,8 +3,9 @@ version: "3"
 services:
   influxdb_v2:
     image: influxdb:{{ influxdb.version }}
-    command: --reporting-disabled
     restart: always
+    env_file:
+      - influxdb.env
     ports:
       - "{{ influxdb.host }}:{{ influxdb.port }}:8086"
     volumes:
